apps/overlays/zion/glyphforge/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: glyphforge-cors-middleware
  namespace: glyphforge
spec:
  headers:
    accessControlAllowOriginList:
      - "https://glyphforge.milanchis.com"
    accessControlAllowMethods:
      - GET
      - POST
      - OPTIONS
      - PUT
      - DELETE
    accessControlAllowHeaders:
      - Content-Type
      - Accept
    accessControlMaxAge: 100
